--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -6,8 +6,10 @@
 -->
 <ion-header>
 
-  <ion-navbar color="primary" >
-    <ion-title>{{'help_search'|translate }}</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>
+      <span [translate]="'help search'"></span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -18,25 +20,25 @@
   <ion-grid>
     <div *ngIf="isLoading">
       <ion-row>
-        <ion-col >
-          <loading loadingSize="large" [loadingMessage]="loadingMessage|translate"></loading>
+        <ion-col>
+          <loading loadingSize="large" [loadingMessage]="loadingMessage"></loading>
         </ion-col>
       </ion-row>
     </div>
     <div *ngIf="!isLoading">
-      <div >
-        <ion-searchbar animated="true"autocomplete="on" placeholder="{{'search_help_by_title'|translate}}"  (ionInput)="getFilteredList($event)"></ion-searchbar>
+      <div>
+        <ion-searchbar animated="true" autocomplete="on" placeholder="{{'search help by title'|translate}}" (ionInput)="getFilteredList($event)"></ion-searchbar>
         <div *ngIf="helpContents && helpContents.length > 0">
-          <div class="help-card"  *ngFor="let helpContent of helpContents">
+          <div class="help-card" *ngFor="let helpContent of helpContents">
             <div *ngIf="helpContent && helpContent.id">
               <ion-row (tap)="toggleHelpContent(helpContent)">
                 <ion-col col-11>
                   {{ helpContent.id }}&nbsp;{{ helpContent.name }}
                 </ion-col>
-                <ion-col col-1  >
+                <ion-col col-1>
                   <div style="text-align: center;">
                     <ion-icon *ngIf="!isHelpContentOpened[helpContent.id]" name="ios-arrow-down" item-right></ion-icon>
-                    <ion-icon *ngIf="isHelpContentOpened[helpContent.id]" name="ios-arrow-up"  item-right></ion-icon>
+                    <ion-icon *ngIf="isHelpContentOpened[helpContent.id]" name="ios-arrow-up" item-right></ion-icon>
                   </div>
                 </ion-col>
               </ion-row>
@@ -44,13 +46,13 @@
                 <hr>
               </div>
               <div *ngIf="isHelpContentOpened[helpContent.id]">
-                <ion-row >
+                <ion-row>
                   <ion-col col-12>
                     {{ helpContent.contents }}
                   </ion-col>
                 </ion-row>
                 <div *ngIf="helpContent.subMenu && helpContent.subMenu.length > 0">
-                  <ion-row >
+                  <ion-row>
                     <ion-col col-12>
                       <help-contents [helpContents]="helpContent.subMenu"></help-contents>
                     </ion-col>
