--- a/src/pages/tracker-capture/tracked-entity-widget-selection/tracked-entity-widget-selection.html
+++ b/src/pages/tracker-capture/tracked-entity-widget-selection/tracked-entity-widget-selection.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      {{'list_of_widgets'|translate}}
+      <span [translate]="'list of widgets'"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
@@ -18,30 +18,30 @@
 </ion-header>
 
 
-<ion-content >
-  <ion-searchbar animated="true"autocomplete="on"  (ionInput)="getFilteredList($event)"></ion-searchbar>
+<ion-content>
+  <ion-searchbar animated="true" autocomplete="on" (ionInput)="getFilteredList($event)"></ion-searchbar>
   <ion-grid>
     <ion-row>
-      <ion-col >
+      <ion-col>
         <ion-list>
           <ion-item *ngFor="let dashboardWidget of dashboardWidgets" (tap)="setSelectedWidget(dashboardWidget)" no-padding>
             <div style="padding:6px 0px;">
-              <span >
+              <span>
                 <span class="program-stage-button-label">
-                  <span *ngIf="dashboardWidget.icon" >
-                    <img class="tracker-pagination-icon" [src]="dashboardWidget.icon"/>
+                  <span *ngIf="dashboardWidget.icon">
+                    <img class="tracker-pagination-icon" [src]="dashboardWidget.icon" />
                   </span>
-                    <span *ngIf="dashboardWidget.iconName" class="tracker-pagination-icon icon-color" >
+                  <span *ngIf="dashboardWidget.iconName" class="tracker-pagination-icon icon-color">
                     <b>{{ dashboardWidget.iconName }}</b>
                   </span>
                 </span>
               </span>
               &nbsp;
-              <span  ion-text [color]="(currentWidget.id == dashboardWidget.id) ?'current' : 'font-color'">{{ dashboardWidget.name }}</span>
+              <span ion-text [color]="(currentWidget.id == dashboardWidget.id) ?'current' : 'font-color'">{{ dashboardWidget.name }}</span>
             </div>
           </ion-item>
-          <ion-item *ngIf = "dashboardWidgets.length == 0">
-            <empty-list-notification [emptyListMessage]="'there_is_no_widget_to_select'|translate"></empty-list-notification>
+          <ion-item *ngIf="dashboardWidgets.length == 0">
+            <empty-list-notification [emptyListMessage]="'there is no widget to select'"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
