--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,50 +7,53 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>{{'about'|translate}}</ion-title>
+    <ion-title>
+      <span [translate]="'about'"></span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
 
-
 <ion-content class="about-page">
-
   <ion-grid>
     <div *ngIf="isLoading">
-      <loading [loadingSize]="'large'" [loadingMessage]="loadingMessage|translate" ></loading>
+      <loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></loading>
     </div>
     <div *ngIf="!isLoading" class="about-details">
       <ion-row>
         <ion-col class="topSLogan">
           <div class="logo-inside-app">
-            <img [src]="logoUrl" >
+            <img [src]="logoUrl">
           </div>
-          <div >
-              <span *ngIf="appInformation && appInformation.name">{{ appInformation.name }}</span><br>
-              <span *ngIf="appInformation && appInformation.version">{{ appInformation.version }}</span>
+          <div>
+            <span *ngIf="appInformation && appInformation.name">{{ appInformation.name }}</span>
+            <br>
+            <span *ngIf="appInformation && appInformation.version">{{ appInformation.version }}</span>
           </div>
         </ion-col>
       </ion-row>
       <div class="item-card" *ngFor="let aboutContent of aboutContents">
         <ion-row (tap)="toggleAboutContents(aboutContent)">
           <ion-col col-11>
-            <img  class="side-menu-icon" [src]="aboutContent.icon"/>&nbsp;&nbsp;
+            <img class="side-menu-icon" [src]="aboutContent.icon" />&nbsp;&nbsp;
             <span ion-text [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'">
-              {{ aboutContent.name|translate }}
+              <span [translate]="aboutContent.name"></span>
             </span>
           </ion-col>
-          <ion-col col-1 item >
+          <ion-col col-1 item>
             <div style="text-align: center;">
-              <ion-icon [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'" *ngIf="!(isAboutContentOpen[aboutContent.id])" name="ios-arrow-down" item-right></ion-icon>
-              <ion-icon [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'" *ngIf="(isAboutContentOpen[aboutContent.id])" name="ios-arrow-up" item-right></ion-icon>
+              <ion-icon [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'" *ngIf="!(isAboutContentOpen[aboutContent.id])"
+                name="ios-arrow-down" item-right></ion-icon>
+              <ion-icon [color]="(isAboutContentOpen[aboutContent.id]) ?'current' : 'font-color'" *ngIf="(isAboutContentOpen[aboutContent.id])"
+                name="ios-arrow-up" item-right></ion-icon>
             </div>
           </ion-col>
         </ion-row>
-        <div *ngIf="(isAboutContentOpen[aboutContent.id])" >
+        <div *ngIf="(isAboutContentOpen[aboutContent.id])">
           <hr>
           <div *ngIf="aboutContent.id == 'appInformation'">
             <ion-row>
-              <ion-col >
+              <ion-col>
                 <div *ngFor="let info of appInformation; ">
                   <p>{{ info.key }}</p>
                   <p>{{ info.value }}</p>
@@ -60,65 +63,67 @@
           </div>
           <div *ngIf="aboutContent.id == 'systemInfo'">
             <ion-row>
-              <ion-col >
+              <ion-col>
                 <div *ngFor="let info of systemInfo">
-                  <div class="content"><b>{{ info.key }}</b><br>{{ info.value }}</div>
+                  <div class="content">
+                    <b>{{ info.key }}</b>
+                    <br>{{ info.value }}</div>
                 </div>
               </ion-col>
             </ion-row>
           </div>
           <div *ngIf="aboutContent.id == 'dataValues'">
-            <div class="item-card" color="font-color" >
-              <ion-item >
-                {{'synced'|translate}}
+            <div class="item-card" color="font-color">
+              <ion-item>
+                <span [translate]="'synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ dataValuesStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
-              <ion-item >
-                {{'not_synced'|translate}}
+              <ion-item>
+                <span [translate]="'not synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ dataValuesStorage.offline }}</ion-badge>
               </ion-item>
             </div>
           </div>
           <div *ngIf="aboutContent.id == 'eventStatus'">
-            <div class="item-card" color="font-color" >
-              <ion-item >
-                {{'synced'|translate}}
+            <div class="item-card" color="font-color">
+              <ion-item>
+                <span [translate]="'synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ eventsStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
-              <ion-item >
-                {{'not_synced'|translate}}
+              <ion-item>
+                <span [translate]="'not synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ eventsStorage.offline }}</ion-badge>
               </ion-item>
             </div>
           </div>
           <div *ngIf="aboutContent.id == 'eventForTrackerStatus'">
-            <div class="item-card" color="font-color" >
-              <ion-item >
-                {{'synced'|translate}}
+            <div class="item-card" color="font-color">
+              <ion-item>
+                <span [translate]="'synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ eventsForTrackerStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
-              <ion-item >
-                {{'not_synced'|translate}}
+              <ion-item>
+                <span [translate]="'not synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ eventsForTrackerStorage.offline }}</ion-badge>
               </ion-item>
             </div>
           </div>
           <div *ngIf="aboutContent.id == 'enrollment'">
-            <div class="item-card" color="font-color" >
-              <ion-item >
-                {{'synced'|translate}}
+            <div class="item-card" color="font-color">
+              <ion-item>
+                <span [translate]="'synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ enrollmentStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
-              <ion-item >
-                {{'not_synced'|translate}}
+              <ion-item>
+                <span [translate]="'not synced'"></span>
                 <ion-badge color="icon-color" item-end>{{ enrollmentStorage.offline }}</ion-badge>
               </ion-item>
             </div>
