--- a/src/pages/data-entry/data-entry-indicators/data-entry-indicators.html
+++ b/src/pages/data-entry/data-entry-indicators/data-entry-indicators.html
@@ -8,7 +8,7 @@
 
   <ion-toolbar color="primary">
     <ion-title>
-      {{ title|translate }}
+      <span [translate]="title"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
