--- a/src/pages/data-entry/data-entry.html
+++ b/src/pages/data-entry/data-entry.html
@@ -7,61 +7,75 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>{{'data_entry'|translate}}</ion-title>
+    <ion-title>
+      <span [translate]="'data entry'"></span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content >
+<ion-content>
   <ion-grid>
     <ion-row>
       <ion-col class="animated fadeIn">
-        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()" >
-          <img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;
-          {{ organisationUnitLabel|translate }}
+        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()">
+          <img class="side-menu-icon" [src]="icons.orgUnit" />&nbsp;&nbsp;
+          <span [translate]="organisationUnitLabel"></span>
         </div>
 
-        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openEntryFormList()" >
-          <img  class="side-menu-icon" [src]="icons.dataSet"/>&nbsp;&nbsp;
-          {{ dataSetLabel|translate }}
+        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openEntryFormList()">
+          <img class="side-menu-icon" [src]="icons.dataSet" />&nbsp;&nbsp;
+          <span [translate]="dataSetLabel"></span>
         </div>
 
-        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openPeriodList()" >
-          <img  class="side-menu-icon" [src]="icons.period"/>&nbsp;&nbsp;
-          {{ periodLabel|translate}}
+        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openPeriodList()">
+          <img class="side-menu-icon" [src]="icons.period" />&nbsp;&nbsp;
+          <span [translate]="periodLabel"></span>
         </div>
 
         <div *ngIf="selectedPeriod && selectedPeriod.iso && dataSetCategoryCombo && dataSetCategoryCombo.id ">
           <div *ngIf="isDataSetDimensionApplicable">
             <div *ngFor="let category of dataSetCategoryCombo.categories;let categoryIndex = index">
-              <div (tap)="openDataDimensionSelection(category)" class="item-card-category animated fadeIn" color="font-color" full text-center text-wrap  >
-                <div style="padding-bottom: 5px;"><b>{{ category.name }}</b></div>
+              <div (tap)="openDataDimensionSelection(category)" class="item-card-category animated fadeIn" color="font-color" full text-center
+                text-wrap>
+                <div style="padding-bottom: 5px;">
+                  <b>{{ category.name }}</b>
+                </div>
                 <div *ngIf="selectedDataDimension[categoryIndex]">{{ selectedDataDimension[categoryIndex].name }}</div>
-                <div *ngIf="!selectedDataDimension[categoryIndex]">{{'touch_to_select_option'|translate}}</div>
+                <div *ngIf="!selectedDataDimension[categoryIndex]">
+                  <span [translate]="'touch to select option'"></span>
+                </div>
               </div>
             </div>
           </div>
           <div class="item-card animated fadeIn" *ngIf="!isDataSetDimensionApplicable">
-            <warning [warningMessage]="isDataSetDimensionApplicableCategoriesMessage" ></warning>
+            <warning [warningMessage]="isDataSetDimensionApplicableCategoriesMessage"></warning>
           </div>
         </div>
         <div *ngIf="isFormReady" class="item-card animated fadeIn" padding-top padding-bottom full (tap)="openDataEntryForm()">
-          <div><b>{{'organisation_unit' |translate}}</b> : {{ organisationUnitLabel|translate }}<br>
-            <b>{{'form'|translate }}</b> : {{ dataSetLabel|translate}}<br>
-            <b>{{'period'|translate}}</b> : {{ periodLabel|translate}}
+          <div>
+            <b>
+              <span [translate]="'organisation unit'"></span>
+            </b> :
+            <span [translate]="organisationUnitLabel"></span>
+            <br>
+            <b>
+              <span [translate]="'form'"></span>
+            </b> :
+            <span [translate]="dataSetLabel"></span>
+            <br>
+            <b>
+              <span [translate]="'period'"></span>
+            </b> :
+            <span [translate]="periodLabel"></span>
           </div>
-          <div class="item-card" color="font-color"  ion-button clear full text-center text-capitalize >
-            <img  class="side-menu-icon" [src]="icons.goToDataEntryForm"/>&nbsp;&nbsp;
-            {{'enter_data'|translate}}
+          <div class="item-card" color="font-color" ion-button clear full text-center text-capitalize>
+            <img class="side-menu-icon" [src]="icons.goToDataEntryForm" />&nbsp;&nbsp;
+            <span [translate]="'enter data'"></span>
           </div>
         </div>
       </ion-col>
     </ion-row>
-
-
   </ion-grid>
-
-
-
 </ion-content>
