--- a/src/pages/data-entry/data-set-selection/data-set-selection.html
+++ b/src/pages/data-entry/data-set-selection/data-set-selection.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      {{'data_entry_form_selection'|translate}}
+      <span [translate]="'data entry form selection'"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
@@ -19,18 +19,18 @@
 </ion-header>
 
 
-<ion-content class = "data-entry-selection">
-  <ion-searchbar animated="true"autocomplete="on"  (ionInput)="getFilteredList($event)"></ion-searchbar>
+<ion-content class="data-entry-selection">
+  <ion-searchbar animated="true" autocomplete="on" (ionInput)="getFilteredList($event)"></ion-searchbar>
   <ion-grid>
     <ion-row>
-      <ion-col >
+      <ion-col>
         <ion-list>
           <ion-item *ngFor="let dataSet of dataSetsList" (tap)="setSelectedDataSet(dataSet)">
-            <img  class="side-menu-icon" [src]="icon"/>&nbsp;&nbsp;
-            <span  ion-text [color]="(currentDataSet.id == dataSet.id) ?'current' : 'font-color'">{{ dataSet.name }}</span>
+            <img class="side-menu-icon" [src]="icon" />&nbsp;&nbsp;
+            <span ion-text [color]="(currentDataSet.id == dataSet.id) ?'current' : 'font-color'">{{ dataSet.name }}</span>
           </ion-item>
-          <ion-item *ngIf = "dataSetsList.length == 0">
-            <empty-list-notification [emptyListMessage]="'there_is_no_data_entry_form_to_select'|translate"></empty-list-notification>
+          <ion-item *ngIf="dataSetsList.length == 0">
+            <empty-list-notification [emptyListMessage]="'there is no data entry form to select'"></empty-list-notification>
           </ion-item>
         </ion-list>
       </ion-col>
