--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -7,75 +7,83 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>{{'event_capture'|translate}}</ion-title>
+    <ion-title>
+      <span [translate]="'event capture'"></span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
 
-<ion-content >
+<ion-content>
   <ion-grid>
     <ion-row>
       <ion-col>
-        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()" >
-          <img  class="side-menu-icon" [src]="icons.orgUnit"/>&nbsp;&nbsp;
-          {{ organisationUnitLabel|translate }}
+        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openOrganisationUnitTree()">
+          <img class="side-menu-icon" [src]="icons.orgUnit" />&nbsp;&nbsp;
+          <span [translate]="organisationUnitLabel"></span>
         </div>
-        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openProgramList()" >
-          <img  class="side-menu-icon" [src]="icons.program"/>&nbsp;&nbsp;
-          {{ programLabel|translate}}
+        <div class="item-card" color="font-color" padding-top padding-bottom ion-button clear full text-center text-capitalize (tap)="openProgramList()">
+          <img class="side-menu-icon" [src]="icons.program" />&nbsp;&nbsp;
+          <span [translate]="programLabel"></span>
         </div>
         <div *ngIf="programCategoryCombo && programCategoryCombo.id ">
           <div *ngIf="isProgramDimensionApplicable">
             <div *ngFor="let category of programCategoryCombo.categories;let categoryIndex = index">
-              <div (tap)="openDataDimensionSelection(category)" class="item-card-category" color="font-color" full text-center text-wrap  >
-                <div style="padding-bottom: 5px;"><b>{{ category.name }}</b></div>
+              <div (tap)="openDataDimensionSelection(category)" class="item-card-category" color="font-color" full text-center text-wrap>
+                <div style="padding-bottom: 5px;">
+                  <b>{{ category.name }}</b>
+                </div>
                 <div *ngIf="selectedDataDimension[categoryIndex]">{{ selectedDataDimension[categoryIndex].name }}</div>
-                <div *ngIf="!selectedDataDimension[categoryIndex]">{{'touch_to_select_option'|translate}}</div>
+                <div *ngIf="!selectedDataDimension[categoryIndex]">
+                  <span [translate]="'touch to select option'"></span>
+                </div>
               </div>
             </div>
           </div>
           <div class="item-card" padding-top padding-bottom *ngIf="!isProgramDimensionApplicable">
-            <warning [warningMessage]="programDimensionNotApplicableMessage" ></warning>
+            <warning [warningMessage]="programDimensionNotApplicableMessage"></warning>
           </div>
         </div>
-        <div *ngIf = "isFormReady" >
-          <div class="item-card" (click)="hideAndShowColumns()" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
+        <div *ngIf="isFormReady">
+          <div class="item-card" (click)="hideAndShowColumns()" color="font-color" padding-top padding-bottom ion-button clear text-center
+            text-capitalize icon-start>
             <ion-icon name="ios-eye" color="icon-color"></ion-icon>
-            {{'columns'|translate}}
+            <span [translate]="'columns'"></span>
           </div>
-          <div class="item-card" (click)="goToEventRegister()" color="font-color" padding-top padding-bottom ion-button clear text-center text-capitalize icon-start>
+          <div class="item-card" (click)="goToEventRegister()" color="font-color" padding-top padding-bottom ion-button clear text-center
+            text-capitalize icon-start>
             <ion-icon name="add" color="icon-color"></ion-icon>
-            {{'add'|translate}}
+            <span [translate]="'add'"></span>
           </div>
         </div>
 
       </ion-col>
     </ion-row>
-    <div *ngIf = "isFormReady" >
+    <div *ngIf="isFormReady">
       <div *ngIf="isLoading">
-        <loading [loadingSize]="'large'" [loadingMessage]="loadingMessage|translate" ></loading>
+        <loading [loadingSize]="'large'" [loadingMessage]="loadingMessage"></loading>
       </div>
       <div *ngIf="!isLoading" class="over-flow-container">
         <ion-row>
           <ion-col>
             <div *ngIf="tableLayout">
-              <table class="table table-bordered" width="100%" >
+              <table class="table table-bordered" width="100%">
                 <thead *ngIf="tableLayout && tableLayout.headers">
-                <tr >
-                  <th *ngFor="let header of tableLayout.headers" >{{ header}}</th>
-                </tr>
+                  <tr>
+                    <th *ngFor="let header of tableLayout.headers">{{ header}}</th>
+                  </tr>
                 </thead>
                 <tbody *ngIf="tableLayout.rows">
-                <tr [ngStyle]="{'background-color': '#F4F4F4' }" *ngFor="let row of tableLayout.rows;let currentIndex = index" (click)="goToEventView(currentIndex)">
-                  <td *ngFor="let data of row">
-                    {{ data }}
-                  </td>
-                </tr>
-                <tr *ngIf="tableLayout.rows.length == 0">
-                  <td colspan="100%">
-                    {{'there_no_data_at_the_moment'|translate}}
-                  </td>
-                </tr>
+                  <tr [ngStyle]="{'background-color': '#F4F4F4' }" *ngFor="let row of tableLayout.rows;let currentIndex = index" (click)="goToEventView(currentIndex)">
+                    <td *ngFor="let data of row">
+                      {{ data }}
+                    </td>
+                  </tr>
+                  <tr *ngIf="tableLayout.rows.length == 0">
+                    <td colspan="100%">
+                      <span [translate]="'there no data at the moment'"></span>>
+                    </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
