--- a/src/pages/reports/reports.html
+++ b/src/pages/reports/reports.html
@@ -7,23 +7,25 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>{{'report'|translate}}</ion-title>
+    <ion-title>
+      <span [translate]="'report'"></span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content >
+<ion-content>
 
 
-  <ion-refresher  (ionRefresh)="doRefresh($event)" >
+  <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content pullingText="Pull to refresh">
     </ion-refresher-content>
   </ion-refresher>
   <div *ngIf="isLoading">
-    <ion-row >
-      <ion-col >
-        <loading loadingSize="large" [loadingMessage]="loadingMessage|translate"  ></loading>
+    <ion-row>
+      <ion-col>
+        <loading loadingSize="large" [loadingMessage]="loadingMessage"></loading>
       </ion-col>
     </ion-row>
   </div>
@@ -32,19 +34,19 @@
     <ion-searchbar animated="true" (ionInput)="getFilteredList($event)"></ion-searchbar>
     <ion-grid>
       <ion-row>
-        <ion-col >
+        <ion-col>
           <ion-list>
             <ion-item *ngFor="let report of reportList" (tap)="selectReport(report)">
-              <img *ngIf="report && report.type"  class="side-menu-icon" [src]="icons[report.type]"/>&nbsp;
+              <img *ngIf="report && report.type" class="side-menu-icon" [src]="icons[report.type]" />&nbsp;
               <span class="circled-btn-border circled-btn">
-                <span *ngIf="report && report.type == 'dataSetReport'" >DS</span>
-                <span *ngIf="report && report.type == 'standardReport'" >SD</span>
+                <span *ngIf="report && report.type == 'dataSetReport'">DS</span>
+                <span *ngIf="report && report.type == 'standardReport'">SD</span>
               </span>&nbsp;
-              <span >{{ report.name }}</span>
-              <ion-icon name="ios-arrow-forward"  item-right ></ion-icon>
+              <span>{{ report.name }}</span>
+              <ion-icon name="ios-arrow-forward" item-right></ion-icon>
             </ion-item>
-            <ion-item *ngIf = "reportList.length == 0">
-              <empty-list-notification [emptyListMessage]="'there_is_no_report_to_select'|translate"></empty-list-notification>
+            <ion-item *ngIf="reportList.length == 0">
+              <empty-list-notification [emptyListMessage]="'there is no report to select'"></empty-list-notification>
             </ion-item>
           </ion-list>
         </ion-col>
