--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -7,7 +7,9 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>{{'settings'|translate}}</ion-title>
+    <ion-title>
+      <span [translate]="'settings'"></span>
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -18,17 +20,14 @@
   <ion-grid>
 
     <div *ngIf="isLoading">
-      <loading [loadingMessage]="loadingMessage|translate" [loadingSize]="'large'"></loading>
+      <loading [loadingMessage]="loadingMessage" [loadingSize]="'large'"></loading>
     </div>
     <div *ngIf="!isLoading">
-
       <div class="item-card" *ngFor="let settingContent of settingContents">
         <ion-row (tap)="toggleSettingContents(settingContent)">
           <ion-col col-11>
             <img class="side-menu-icon" [src]="settingContent.icon" />&nbsp;&nbsp;
-            <span ion-text [color]="(isSettingContentOpen[settingContent.id]) ?'current' : 'font-color'">
-              {{ settingContent.name|translate }}
-            </span>
+            <span ion-text [color]="(isSettingContentOpen[settingContent.id]) ?'current' : 'font-color'" [translate]="settingContent.name"></span>
           </ion-col>
           <ion-col col-1 item>
             <div style="text-align: center;">
@@ -50,7 +49,9 @@
               <ion-row>
                 <ion-col>
                   <ion-item>
-                    <ion-label>{{'current_language'|translate}} </ion-label>
+                    <ion-label>
+                      <span [translate]="'current language'"></span>
+                    </ion-label>
                     <ion-select (ionChange)="updateCurrentLanguage()" [(ngModel)]="currentLanguage" interface="action-sheet">
                       <ion-option value="en">en</ion-option>
                       <ion-option value="fr">fr</ion-option>
@@ -87,7 +88,9 @@
                 <ion-row>
                   <ion-col>
                     <ion-item no-lines>
-                      <ion-label>{{'auto_sync'|translate}}</ion-label>
+                      <ion-label>
+                        <span [translate]="'auto sync'"></span>
+                      </ion-label>
                       <ion-toggle (ionChange)="applySettings(settingContent)" color="primary" [(ngModel)]="settingObject.synchronization.isAutoSync"></ion-toggle>
                     </ion-item>
                   </ion-col>
@@ -105,21 +108,35 @@
                 <ion-row>
                   <ion-col>
                     <ion-item>
-                      <ion-label>{{'form_label'|translate}}</ion-label>
+                      <ion-label>
+                        <span [translate]="'form label'"></span>
+                      </ion-label>
                       <ion-select (ionChange)="applySettings(settingContent)" [(ngModel)]="settingObject.entryForm.label" interface="action-sheet">
-                        <ion-option value="displayName">{{'display_name'|translate}}</ion-option>
-                        <ion-option value="formName">{{'form_name'|translate}}</ion-option>
+                        <ion-option value="displayName">
+                          <span [translate]="'display name'"></span>
+                        </ion-option>
+                        <ion-option value="formName">
+                          <span [translate]="'form name'"></span>
+                        </ion-option>
                       </ion-select>
                     </ion-item>
                     <ion-item>
-                      <ion-label>{{'form_layout'|translate}}</ion-label>
+                      <ion-label>
+                        <span [translate]="'form layout'"></span>
+                      </ion-label>
                       <ion-select (ionChange)="applySettings(settingContent)" [(ngModel)]="settingObject.entryForm.formLayout" interface="action-sheet">
-                        <ion-option value="listLayout">{{'list_layout'|translate}}</ion-option>
-                        <ion-option value="tableLayout">{{'table_layout'|translate}}</ion-option>
+                        <ion-option value="listLayout">
+                          <span [translate]="'list layout'"></span>
+                        </ion-option>
+                        <ion-option value="tableLayout">
+                          <span [translate]="'table layout'"></span>
+                        </ion-option>
                       </ion-select>
                     </ion-item>
                     <ion-item>
-                      <ion-label floating>{{'data_element_per_page'|translate}}</ion-label>
+                      <ion-label floating>
+                        <span [translate]="'data element per page'"></span>
+                      </ion-label>
                       <ion-input (ionBlur)="applySettings(settingContent)" type="number" min="1" [(ngModel)]="settingObject.entryForm.maxDataElementOnDefaultForm"></ion-input>
                     </ion-item>
                   </ion-col>
