--- a/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -5,42 +5,41 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar color="primary">
-    <ion-title>{{'tracked_entity_dashboard'|translate}}</ion-title>
+    <ion-title>
+      <span [translate]="'tracked entity dashboard'"></span>
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content>
   <ion-grid>
     <div *ngIf="isLoading">
-      <loading [loadingMessage]="loadingMessage|translate" [loadingSize]="'large'"></loading>
+      <loading [loadingMessage]="loadingMessage" [loadingSize]="'large'"></loading>
     </div>
     <div *ngIf="!isLoading">
       <ion-row>
         <ion-col>
           <div class="item-card" no-padding (click)="openWidgetList()">
-            <ion-item no-padding >
+            <ion-item no-padding>
               <div ion-text color="font-color" align="center">
                 <div style="padding:6px 0px;">
-                  <span >
+                  <span>
                     <span class="program-stage-button-label">
-                      <span *ngIf="currentWidget.icon" >
-                        <img class="tracker-pagination-icon" [src]="currentWidget.icon"/>
+                      <span *ngIf="currentWidget.icon">
+                        <img class="tracker-pagination-icon" [src]="currentWidget.icon" />
                       </span>
-                        <span *ngIf="currentWidget.iconName" class="tracker-pagination-icon icon-color" >
+                      <span *ngIf="currentWidget.iconName" class="tracker-pagination-icon icon-color">
                         <b>{{ currentWidget.iconName }}</b>
                       </span>
                     </span>
                   </span>
-                  &nbsp;
-                  {{ currentWidget.name }}
+                  &nbsp; {{ currentWidget.name }}
                 </div>
               </div>
               <div style="text-align: center" item-right float-right>
-                <span  float-end class="side-menu-icon"><img [src]="icons.menu"></span>
+                <span float-end class="side-menu-icon">
+                  <img [src]="icons.menu">
+                </span>
               </div>
             </ion-item>
           </div>
@@ -56,13 +55,13 @@
                   <div class="inputLabel">
                     <b>
                       <div class="inputLabel">
-                        {{'enrollments'|translate}}
+                        <span [translate]="'enrollments'"></span>
                       </div>
                     </b>
                     <hr>
                   </div>
                   <div class="inputLabel">
-                    {{'organisation_unit'|translate}}
+                    <span [translate]="'organisation unit'"></span>
                   </div>
                   <div class="input-field-container">
                     <ion-item>
@@ -70,7 +69,7 @@
                     </ion-item>
                   </div>
                   <div class="inputLabel">
-                    {{'program'|translate}}
+                    <span [translate]="'program'"></span>
                   </div>
                   <div class="input-field-container">
                     <ion-item>
@@ -82,20 +81,16 @@
                   <div class="inputLabel">
                     <b>
                       <div class="inputLabel">
-                        {{'profile'|translate}}
+                        <span [translate]="'profile'"></span>
                       </div>
                     </b>
                     <hr>
                   </div>
                   <div *ngIf="programTrackedEntityAttributes && programTrackedEntityAttributes.length > 0">
                     <div *ngFor="let programTrackedEntityAttribute of programTrackedEntityAttributes">
-                      <tracked-entity-inputs
-                        [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute"
-                        [currentUser]="currentUser"
-                        [data]="dataObject"
-                        [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
-                        [mandatory]="programTrackedEntityAttribute.mandatory"
-                        (onChange)="updateData($event)"></tracked-entity-inputs>
+                      <tracked-entity-inputs [trackedEntityAttribute]="programTrackedEntityAttribute.trackedEntityAttribute" [currentUser]="currentUser"
+                        [data]="dataObject" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
+                        [mandatory]="programTrackedEntityAttribute.mandatory" (onChange)="updateData($event)"></tracked-entity-inputs>
                     </div>
                   </div>
                 </div>
@@ -106,17 +101,19 @@
                     </div>
                   </div>
                   <div style="display: inline-block;width: 49.3%">
-                    <div  float-right>
-                      <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance.id)" padding ion-button clear text-center text-capitalize >
-                        <ion-icon name="trash" ></ion-icon>
+                    <div float-right>
+                      <div class="item-card" color="danger" float-right (click)="deleteTrackedEntity(trackedEntityInstance.id)" padding ion-button
+                        clear text-center text-capitalize>
+                        <ion-icon name="trash"></ion-icon>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="item-card-program-stage-section">
-                  <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex +1)" padding ion-button clear text-center text-capitalize>
-                    <ion-icon name="ios-arrow-forward-outline" ></ion-icon>
+                  <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex +1)" padding ion-button clear
+                    text-center text-capitalize>
+                    <ion-icon name="ios-arrow-forward-outline"></ion-icon>
                   </div>
                 </div>
 
@@ -125,12 +122,8 @@
                 <div *ngIf="programStages && programStages.length > 0">
                   <div *ngFor="let programStage of programStages">
                     <div *ngIf="widget.id == programStage.id">
-                      <program-stage-tracker-based
-                        [programStage]="programStage"
-                        [trackedEntityInstance]="trackedEntityInstance.id"
-                        [currentWidgetIndex]="currentWidgetIndex"
-                        [isLastStage]="(currentWidgetIndex == programStages.length)"
-                        (onChange)="updateWidgetPagination($event)"></program-stage-tracker-based>
+                      <program-stage-tracker-based [programStage]="programStage" [trackedEntityInstance]="trackedEntityInstance.id" [currentWidgetIndex]="currentWidgetIndex"
+                        [isLastStage]="(currentWidgetIndex == programStages.length)" (onChange)="updateWidgetPagination($event)"></program-stage-tracker-based>
                     </div>
                   </div>
                 </div>
@@ -147,12 +140,13 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <button ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets" [disabled]="(isDashboardWidgetOpen[widget.id])" (tap)="changeDashboardWidget(widget)">
+          <button ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets" [disabled]="(isDashboardWidgetOpen[widget.id])"
+            (tap)="changeDashboardWidget(widget)">
             <div [ngClass]=" (isDashboardWidgetOpen[widget.id])?'program-stage-button-label':''">
-              <div *ngIf="widget.icon" >
-                <img class="footer-icon" [src]="widget.icon"/>
+              <div *ngIf="widget.icon">
+                <img class="footer-icon" [src]="widget.icon" />
               </div>
-              <div *ngIf="widget.iconName" >
+              <div *ngIf="widget.iconName">
                 <b>{{ widget.iconName }}</b>
               </div>
             </div>
