--- a/src/pages/tracker-capture/tracker-hide-show-column/tracker-hide-show-column.html
+++ b/src/pages/tracker-capture/tracker-hide-show-column/tracker-hide-show-column.html
@@ -4,10 +4,10 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header >
+<ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      {{'visible_header'|translate}}
+      <span [translate]="'visible header'"></span>
     </ion-title>
     <ion-buttons start>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
@@ -18,18 +18,18 @@
 </ion-header>
 
 
-<ion-content >
+<ion-content>
   <ion-grid>
     <div *ngIf="trackedEntityAttributes && trackedEntityAttributes.length > 0">
       <ion-row>
         <ion-col>
-          <button  color="primary" (tap)="autoSelectFields(true)" round ion-button full >
-            {{'select_all'|translate}}
+          <button color="primary" (tap)="autoSelectFields(true)" round ion-button full>
+            <span [translate]="'select all'"></span>
           </button>
         </ion-col>
         <ion-col>
-          <button  color="primary" (tap)="autoSelectFields(false)" round ion-button full>
-            {{'deselect_all'|translate}}
+          <button color="primary" (tap)="autoSelectFields(false)" round ion-button full>
+            <span [translate]="'deselect all'"></span>
           </button>
         </ion-col>
       </ion-row>
@@ -43,8 +43,8 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <button  color="primary" round ion-button full (tap)="saveChanges()">
-            {{'save'|translate}}
+          <button color="primary" round ion-button full (tap)="saveChanges()">
+            <span [translate]="'save'"></span>
           </button>
         </ion-col>
       </ion-row>
